# chat-server

./: .gitignore  Cargo.toml  README.md
resources/: logger_cfg.yml
src/: cache.rs  cleaning_task.rs  config.rs  error.rs  host.rs  io_utils.rs  logger_config.rs  main.rs  profiles.rs  user_cache.rs
