[package]
name = "telnet-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
#tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "io-std", "io-util"] }
log = "0.4.25"
log4rs = { version = "1.3.0", features = ["console_writer"] }
