[package]
name = "telnet-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
#tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "io-std", "io-util"] }
log = "0.4.25"
log4rs = "1"
rev_buf_reader = "0.3.0"
chrono = "0.4.39"
